[tool.poetry]
name = "dbt-tutorial"
version = "0.0.0"
authors = ["miautawn <miautawn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.9.1"
dbt-bigquery = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
